--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,4 @@
-# Hi, I'm Jane Doe
+# Hi, I'm Narayan Mishra
 
-I'm creating noice web experiences for the next generation of consumer-facing companies
+I'm Full Stack and Android App Developer
+ 
